# Leanix_survey

./: .dockerignore  .env.example  .gitignore  CLEANUP_SUMMARY.md  CVI_IMPLEMENTATION.md  DOCKER_DEPLOYMENT.md  Dockerfile.api  Dockerfile.streamlit  GITHUB_ACTIONS_SETUP.md  Makefile  PROJECT_STRUCTURE.md  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt  test_models.py
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  lint.yml  syntax.yml  tests.yml
.streamlit/: config.toml
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  FEATURES.md  RELEASE_NOTES.md  SCHEMA_DOCUMENTATION.md  SECURITY.md  UV_SETUP.md  novo-nordisk-cvi-guidelines.md
examples/: example_survey_comprehensive.json  example_survey_factsheet_mapping.json  example_survey_simple.json  survey_input_schema.json
scripts/: verify_installation.py
src/: api.py  generate_schema.py  leanix_client.py  leanix_config.py  leanix_survey_models.py  streamlit_app.py  validate_survey.py
tests/: __init__.py
tests/integration/: __init__.py  test_api_integration.py
